<?xml version="1.0"?>
<package>
  <name>minkindr</name>
  <version>1.0.0</version>
  <description>minkindr</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen_checks</build_depend>
</package>

